Fix spacing issues

--- a/src/components/InitiativeTable.css
+++ b/src/components/InitiativeTable.css
@@ -5,7 +5,6 @@
 }
 
 .InitiativeTable .container {
-  height: 100%;
   max-width: 800px;
   margin: auto;
   padding: 10px;
@@ -16,31 +15,32 @@
 .InitiativeTable .creature-block-panel {
   flex-grow: 1;
   overflow: auto;
+  /* background: red; */
 }
 
 .controls-panel {
-  height: 100%;
-  overflow: hidden;
-  width: 360px;
+  /* height: 100%; */
+  overflow: auto;
 }
 
-/* .InitiativeTable .container .controls-panel {
-  flex-shrink: 0;
-  width: 100%;
-  overflow: hidden;
-  padding-top: 20px;
-} */
+.table-controls {
+  flex-grow: 0;
+}
 
-.InitiativeTable .controls-panel .table-container {
+.table-container {
   flex-grow: 1;
   padding-left: 3px;
   padding-right: 3px;
-  margin-bottom: 20px;
   overflow: auto;
 }
 
 .InitiativeTable .initiative-table {
   width: 100%;
+  overflow: auto;
+}
+
+.initiative-table tbody {
+  overflow: auto;
 }
 
 .InitiativeTable .initiative-table tbody tr:hover {
